feat: Entities added

--- a/Blog.WebUI/appsettings.json
+++ b/Blog.WebUI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AllowedHosts": "*",
-  "BaseUrl": "http://localhost:5000/",
+  "BaseUrl": "http://localhost:44309/",
   "TokenOptions": {
     "Audience": "ilkerogtc@gmail.com",
     "Issuer":"ilkerogtc@gmail.com",
@@ -10,9 +10,9 @@
   },
 
   "MailSettings": {
-    "Mail": "ottilie.bins82@ethereal.email",
+    "Mail": "armand82@ethereal.email",
     "DisplayName": "ilker.ogutcu",
-    "Password": "M1vxaX5wEJjfxzzGhH",
+    "Password": "Gu41VYzrTJ2EySWbM4",
     "Host": "smtp.ethereal.email",
     "Port": 587
   },
