feat: Update category

--- a/Blog.WebUI/appsettings.json
+++ b/Blog.WebUI/appsettings.json
@@ -10,9 +10,9 @@
   },
 
   "MailSettings": {
-    "Mail": "armand82@ethereal.email",
+    "Mail": "matilde.spinka@ethereal.email",
     "DisplayName": "ilker.ogutcu",
-    "Password": "Gu41VYzrTJ2EySWbM4",
+    "Password": "rMXUyzm84GYzHgZc1f",
     "Host": "smtp.ethereal.email",
     "Port": 587
   },
