--- a/Blog.WebUI/appsettings.json
+++ b/Blog.WebUI/appsettings.json
@@ -10,9 +10,9 @@
   },
 
   "MailSettings": {
-    "Mail": "matilde.spinka@ethereal.email",
+    "Mail": "briana.considine73@ethereal.email",
     "DisplayName": "ilker.ogutcu",
-    "Password": "rMXUyzm84GYzHgZc1f",
+    "Password": "tbdPbc1p7716RskQHP",
     "Host": "smtp.ethereal.email",
     "Port": 587
   },
