feat(category-view): Add category and get categories added

--- a/Blog.WebUI/appsettings.json
+++ b/Blog.WebUI/appsettings.json
@@ -8,11 +8,17 @@
     "SecurityKey": "mysEcuriTyKeyY!:.",
     "DurationInMinutes": "60"
   },
+  
+  "CloudinarySettings": {
+    "CloudName": "dk0svixnx",
+    "ApiKey": "359276566231174",
+    "ApiSecret": "RSd7T39dijqdECyHXIIxKHbU9Fk"
+  },
 
   "MailSettings": {
-    "Mail": "briana.considine73@ethereal.email",
+    "Mail": "florencio.reynolds@ethereal.email",
     "DisplayName": "ilker.ogutcu",
-    "Password": "tbdPbc1p7716RskQHP",
+    "Password": "JgGBbWV38WK6FqMXZ4",
     "Host": "smtp.ethereal.email",
     "Port": 587
   },
