feat(category): RabbitMq message broker added and category data comes from elasticsearch

--- a/Blog.WebUI/appsettings.json
+++ b/Blog.WebUI/appsettings.json
@@ -3,18 +3,21 @@
   "BaseUrl": "http://localhost:44309/",
   "TokenOptions": {
     "Audience": "ilkerogtc@gmail.com",
-    "Issuer":"ilkerogtc@gmail.com",
+    "Issuer": "ilkerogtc@gmail.com",
     "AccessTokenExpiration": 60,
     "SecurityKey": "mysEcuriTyKeyY!:.",
     "DurationInMinutes": "60"
   },
-  
+  "MessageBrokerOptions": {
+    "RabbitMqUri": "rabbitmq://localhost/",
+    "Username": "guest",
+    "Password": "guest"
+  },
   "CloudinarySettings": {
     "CloudName": "dk0svixnx",
     "ApiKey": "359276566231174",
     "ApiSecret": "RSd7T39dijqdECyHXIIxKHbU9Fk"
   },
-
   "MailSettings": {
     "Mail": "florencio.reynolds@ethereal.email",
     "DisplayName": "ilker.ogutcu",
@@ -32,6 +35,11 @@
   "MongoDatabaseConfig": {
     "ConnectionString": "mongodb://localhost:27017",
     "DatabaseName": "starterProject"
+  },
+  "ElasticSearchConfig": {
+    "ConnectionString": "http://localhost:9200/",
+    "Username": "",
+    "Password": ""
   },
   "SeriLogConfigurations": {
     "FileLogConfiguration": {
