--- a/Blog.Core/Blog.Core.csproj
+++ b/Blog.Core/Blog.Core.csproj
@@ -8,7 +8,7 @@
         <PackageReference Include="Autofac" Version="6.1.0" />
         <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="7.1.0" />
         <PackageReference Include="Autofac.Extras.DynamicProxy" Version="6.0.0" />
-        <PackageReference Include="FluentValidation" Version="9.5.1" />
+        <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.3" />
         <PackageReference Include="MailKit" Version="2.13.0" />
         <PackageReference Include="MassTransit" Version="7.2.2" />
         <PackageReference Include="MassTransit.AspNetCore" Version="7.2.2" />
