--- a/Blog.WebUI/Blog.WebUI.csproj
+++ b/Blog.WebUI/Blog.WebUI.csproj
@@ -20,6 +20,8 @@
         <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.8" />
         <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.8" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+        <PackageReference Include="FluentValidation.AspNetCore" Version="10.3.3" />
+
     </ItemGroup>
 
     <ItemGroup>
