feat(role): Create and update role added

--- a/Blog.RabbitMq.Consumers/Blog.Consumer/appsettings.json
+++ b/Blog.RabbitMq.Consumers/Blog.Consumer/appsettings.json
@@ -15,5 +15,12 @@
     "ConnectionString": "http://localhost:9200/",
     "Username": "",
     "Password": ""
+  },
+  "MailSettings": {
+    "Mail": "florencio.reynolds@ethereal.email",
+    "DisplayName": "ilker.ogutcu",
+    "Password": " ",
+    "Host": "smtp.ethereal.email",
+    "Port": 587
   }
 }
